# docs/swagger.json
@@ -251,7 +251,7 @@
             "delete": {
                 "description": "Menghapus data Ground berdasarkan id",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -276,13 +276,18 @@
                         "required": true
                     },
                     {
-                        "description": "Data Ground",
-                        "name": "Ground",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.GroundInput"
-                        }
+                        "type": "string",
+                        "description": "Nama Ground",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Gambar Ground",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -298,6 +303,47 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/model.Ground"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/invoice-reservasi": {
+            "post": {
+                "description": "Membuat data InvoiceReservasi baru",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "InvoiceReservasi"
+                ],
+                "summary": "Membuat data InvoiceReservasi baru",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.SuccessResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.InvoiceReservasi"
                                         }
                                     }
                                 }
@@ -1217,8 +1263,62 @@
                 }
             }
         },
-        "model.GroundInput": {
-            "type": "object"
+        "model.InvoiceReservasi": {
+            "type": "object",
+            "required": [
+                "jenis_pengunjung",
+                "tanggal_kepulangan"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "jenis_pengunjung": {
+                    "type": "string"
+                },
+                "jumlah": {
+                    "type": "integer"
+                },
+                "link_pembayaran": {
+                    "type": "string"
+                },
+                "link_perizinan": {
+                    "type": "string"
+                },
+                "nomor_invoice": {
+                    "type": "string"
+                },
+                "reservasi": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Reservasi"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                },
+                "tanggal_kedatangan": {
+                    "type": "string"
+                },
+                "tanggal_kepulangan": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
         },
         "model.Kavling": {
             "type": "object",
@@ -1236,11 +1336,14 @@
                 "id": {
                     "type": "string"
                 },
-                "jenis_tenda": {
-                    "type": "string"
-                },
                 "nama": {
                     "type": "string"
+                },
+                "reservasi": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Reservasi"
+                    }
                 },
                 "status": {
                     "description": "GORM default",
@@ -1256,9 +1359,7 @@
             "required": [
                 "ground_id",
                 "harga",
-                "jenis_tenda",
-                "nama",
-                "status"
+                "nama"
             ],
             "properties": {
                 "ground_id": {
@@ -1267,13 +1368,7 @@
                 "harga": {
                     "type": "integer"
                 },
-                "jenis_tenda": {
-                    "type": "string"
-                },
                 "nama": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
@@ -1324,6 +1419,41 @@
                 },
                 "stok": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Reservasi": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "harga": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "invoice_reservasi_id": {
+                    "type": "string"
+                },
+                "jumlah": {
+                    "type": "integer"
+                },
+                "kavling_id": {
+                    "type": "string"
+                },
+                "perlengkapan_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
